--- a/Intro_to_Python.ipynb
+++ b/Intro_to_Python.ipynb
@@ -30,7 +30,7 @@
       "source": [
         "# Intro to Python\n",
         "\n",
-        "This intro to Python is a translation of the R intro provided [here](https://colab.research.google.com/github/czymara/czymara.github.io/blob/master/_teaching/Intro_to_R.ipynb). Thus, it is tailored for the transition from R to Python.\n",
+        "This intro to Python is a translation of the R intro provided [here](https://colab.research.google.com/github/czymaraclass/intros/blob/main/Intro_to_R.ipynb). Thus, it is tailored for the transition from R to Python.\n",
         "\n",
         "## Math operators\n",
         "\n",
